@@ -12,7 +12,6 @@
  */
 package org.openhab.binding.vigicrues.internal;
 
-import java.util.Collections;
 import java.util.Set;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
@@ -27,10 +26,8 @@ import org.openhab.core.thing.ThingTypeUID;
 @NonNullByDefault
 public class VigiCruesBindingConstants {
 
-    public static final String BINDING_ID = "vigicrues";
-
-    // List of all Thing Type UIDs
-    public static final ThingTypeUID THING_TYPE_STATION = new ThingTypeUID(BINDING_ID, "station");
+    // List of Thing Type UIDs
+    public static final ThingTypeUID THING_TYPE_STATION = new ThingTypeUID("vigicrues", "station");
 
     // List of all Channel id's
     public static final String OBSERVATION_TIME = "observation-time";
@@ -50,5 +47,5 @@ public class VigiCruesBindingConstants {
     public static final String LOCATION = "Location";
     public static final String FLOOD = "Crue";
 
-    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES_UIDS = Collections.singleton(THING_TYPE_STATION);
+    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES_UIDS = Set.of(THING_TYPE_STATION);
 }
